# mlplatform-workshop

./: LICENSE  README.md
infra/: .gitignore  Pulumi.dev.yaml  Pulumi.yaml  S3ServiceAccount.ts  TraefikRoute.ts  cluster.ts  config.ts  index.ts  package-lock.json  package.json  resourcegroup.ts  tsconfig.json
model-template/: cookiecutter.json
model-template/{{cookiecutter.project_slug}}/: .dockerignore  .gitignore  Dockerfile  Makefile  pyproject.toml
model-template/{{cookiecutter.project_slug}}/.github/workflows/: deploy.yml
model-template/{{cookiecutter.project_slug}}/data/: .gitignore  iris.csv.dvc
model-template/{{cookiecutter.project_slug}}/data/.dvc/: config
model-template/{{cookiecutter.project_slug}}/infra/: Pulumi.yaml  TraefikRoute.ts  index.ts  package-lock.json  package.json
model-template/{{cookiecutter.project_slug}}/src/{{cookiecutter.module_name}}/serving/: EXAMPLES.md  __main__.py
model-template/{{cookiecutter.project_slug}}/src/{{cookiecutter.module_name}}/training/: train.py
model-template/{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.module_name}}.py
