[tool.poetry]
name = "{{cookiecutter.project_slug}}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.project_short_description }}"
authors = ["{{ cookiecutter.full_name.replace("\"", "\\\"") }} <{{ cookiecutter.email }}>"]

[tool.poetry.dependencies]
python = "^3.8"
mlflow = "^1.17.0"
lightgbm = "^3.2.1"
matplotlib = "^3.4.2"
scikit-learn = "^0.24.2"
boto3 = "1.17.49"
fastapi = "^0.65.1"
uvicorn = "^0.14.0"
dvc = {extras = ["s3"], version = "^2.3.0"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
train = "src.{{cookiecutter.module_name}}.training.train:main"
serve = "src.{{cookiecutter.module_name}}.serving.__main__:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

